# OSEF

./: .coverage  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_FREEZE_v1.md  ARCHITECTURE_INDEX.md  CAPABILITY_REGISTRY_CERTIFICATION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMUNITY.md  CONTRIBUTING.md  CORRELATION_ENGINE_SPEC.md  DOCUMENTATION_AUDIT_REPORT.md  DOCUMENTATION_STYLE_GUIDE.md  DOMAIN_REGISTRY_SPEC.md  Dockerfile  ECOSYSTEM_READINESS_REPORT.md  ECOSYSTEM_STATE.md  ECOSYSTEM_STATUS.md  ENGINEERING_MEMORY_REPORT.md  ENGINEERING_ONTOLOGY.md  ENGINEERING_ONTOLOGY_VERSION.md  ENGINEERING_REASONER_SPEC.md  EVENT_BUS_CERTIFICATION.md  EXTENSION_HOST_CERTIFICATION.md  FOUNDATION_RELEASE_READINESS_REPORT.md  GOVERNANCE.md  GRAPH_QUERY_SPEC.md  GRAPH_VOCABULARY_SPEC.md  IMPLEMENTATION_STATUS.md  KNOWLEDGE_MODEL_SPEC.md  LANGUAGE_ADAPTER_SPEC.md  LANGUAGE_CERTIFICATION_SPEC.md  LANGUAGE_NODE_MAPPING.md  LANGUAGE_PACK_CONTRACT.md  LANGUAGE_PLUGIN_SPEC.md  LANGUAGE_SEMANTICS_SPEC.md  NORMALIZED_SYMBOL_MODEL_SPEC.md  ORIGINAL_REQUEST.md  PIPELINE_ENGINE_CERTIFICATION.md  PIPELINE_EXECUTION_SPEC.md  (+36 more)
.agents/: AGENTS.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.osef/: ACTIVE_ADRS.md  ACTIVE_RFCS.md  AI_CONTEXT.md  ARCHITECTURE_EVOLUTION.md  ARCHITECTURE_GUARDRAILS.md  ARCHITECTURE_STATE.md  DECISIONS.md  KNOWN_LIMITATIONS.md  NEXT_SESSION.md  PLUGIN_ECOSYSTEM.md  PROJECT_STATE.md  QUALITY_METRICS.md  RELEASE_STATE.md  ROADMAP_STATE.md  SESSION_HISTORY.md  TECH_DEBT.md  VERSION_STATE.md
agents/: README.md
architectures/: ARCHITECTURE_REVIEW_REPORT.md  BUILD_AND_RELEASE_ARCHITECTURE.md  DEPENDENCY_GRAPH.md  DOMAIN_MODELS.md  EKK_ARCHITECTURE.md  EVENT_ARCHITECTURE.md  FAILURE_RECOVERY_MODEL.md  INTERNAL_API_SPECIFICATION.md  OSTE_SPECIFICATION.md  PACKAGE_ARCHITECTURE.md  PUBLIC_API_SPECIFICATION.md  PYTHON_PACKAGING_SPECIFICATION.md  README.md  REFERENCE_ARCHITECTURE.md  REPOSITORY_LIFECYCLE.md  RUNTIME_ARCHITECTURE.md  SDK_SPECIFICATION.md  SERVICE_CONTRACTS.md  SYSTEM_DESIGN.md  SYSTEM_INTERACTION_MODELS.md
benchmarks/: BENCHMARK_CERTIFICATION_SPEC.md  BENCHMARK_CORPUS_SPEC.md  BENCHMARK_HISTORY_SPEC.md  BENCHMARK_MANIFEST_SPEC.md  CASE_STUDIES.md  DASHBOARD_AND_TRENDS_SPEC.md  PUBLIC_RESULTS_SPEC.md  README.md  REPORTING_STANDARDS.md  run.sh
cli/: README.md
community/: README.md
config/: README.md
docs/: CROSS_LANGUAGE_CERTIFICATION_SPEC.md  ENGINEERING_CONCEPT_COVERAGE.yaml  ENGINEERING_CONCEPT_SPEC.md  JAVA_LANGUAGE_MAPPING.md  LANGUAGE_EQUIVALENCE_SPEC.md  PRD.md  README.md  SRS.md  adr_index.md  architecture.md  cli_reference.md  contributing.md  ekg.md  index.md  installation.md  plugin_guide.md  quickstart.md  release_process.md  rfc_index.md  sdk_guide.md
dx/: AI_IDE_INTEGRATION.md  CLI_UX.md  COMMAND_DESIGN_GUIDELINES.md  CONFIGURATION_EXPERIENCE.md  DX_ARCHITECTURE.md  DX_CHECKLIST.md  DX_PRINCIPLES.md  ERROR_RECOVERY_GUIDELINES.md  FIRST_HOUR_EXPERIENCE.md  INSTALLATION_ONBOARDING.md  INTERACTIVE_WORKFLOW_SPECIFICATION.md  PLUGIN_DX.md  README.md  SDK_UX.md
examples/: README.md
generators/: README.md
governance/: ADR_SYSTEM.md  CONSTITUTION.md  ENGINEERING_PRINCIPLES.md  FOUNDER_MANIFESTO.md  PROJECT_EXECUTION.md  README.md  RFC_SYSTEM.md
implementation/: API_STABILITY_POLICY.md  CODING_STANDARDS.md  DEFINITION_OF_DONE.md  DEPENDENCY_MATRIX.md  ENGINEERING_BACKLOG.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_ORDER.md  MILESTONE_TRACKER.md  README.md  (+8 more)
plugins/documentation/documentation/: plugin.yaml  pyproject.toml
plugins/python/: plugin.yaml  pyproject.toml
plugins/python/python/: README.md  plugin.yaml
plugins/python/python/src/osef_python/resolvers/: types.py
plugins/python/src/osef_python/: plugin.py  python.py  symbol_table.py
plugins/python/src/osef_python/resolvers/: imports.py
plugins/python/tests/: test_parity.py
plugins/visualization/visualization/: pyproject.toml
plugins/visualization/visualization/src/osef_visualization/: cli.py  plugin.py  registries.py
plugins/visualization/visualization/src/osef_visualization/projections/: architecture.py  dependency.py
plugins/visualization/visualization/src/osef_visualization/renderers/: base.py  graphviz.py  html.py
reference-plugins/future/: plugin.yaml  pyproject.toml
reference-plugins/future/src/osef_future/: agent_host.py  plugin.py  tools.py
reference-plugins/future/src/osef_future/agents/: architecture_assistant.py  repository_qa.py
reference-plugins/infrastructure/: plugin.yaml  pyproject.toml
reference-plugins/infrastructure/src/osef_infrastructure/: benchmarks.py  cli.py  dashboards.py  ikm.py  plugin.py
reference-plugins/infrastructure/src/osef_infrastructure/adapters/: __init__.py  base.py  compose.py  docker.py  helm.py  kubernetes.py  pulumi.py  terraform.py
reference-plugins/infrastructure/src/osef_infrastructure/policies/: __init__.py  container.py  kubernetes.py  networking.py  resources.py  secrets.py
reference-plugins/infrastructure/src/osef_infrastructure/projections/: __init__.py  deployment.py
reference-plugins/java/: README.md  pyproject.toml
reference-plugins/java/src/: pipeline.py
reference-plugins/java/src/extractor/: extractor.py
reference-plugins/java/src/parser/: adapter.py
reference-plugins/java/src/projections/: mapper.py
reference-plugins/java/src/resolver/: resolver.py
reference-plugins/java/src/semantics/: engine.py
reference-plugins/java/src/tests/: test_end_to_end.py  test_parser.py
(+1562 files in other folders)
