[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
"osef-studio/out" = "osef/cli/ui"

[project]
name = "osef"
version = "1.0.0"
description = "The universal standardization layer for open source."
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "jinja2>=3.0.0",
    "rich>=13.0.0",
    "pathspec>=0.11.0",
    "PyYAML>=6.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy"
]
docs = [
    "mkdocs-material>=9.0.0"
]
ui = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0"
]

[project.scripts]
osef = "osef.cli.main:app"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
