[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
"osef-studio/out" = "osef/cli/ui"
"reference-plugins" = "osef/reference-plugins"

[project]
name = "osef"
version = "1.0.0"
description = "The universal standardization layer for open source."
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "jinja2>=3.0.0",
    "rich>=13.0.0",
    "pathspec>=0.11.0",
    "PyYAML>=6.0",
    "cryptography>=42.0.0",
    "httpx>=0.27.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy"
]
docs = [
    "mkdocs-material>=9.0.0"
]
ui = [
    "fastapi>=0.139.2",
    "uvicorn>=0.20.0",
    "litellm>=1.0.0",
    "boto3>=1.0.0"
]

[project.scripts]
osef = "osef.cli.main:app"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.osef.quality_gates]
max_broken_imports = 200
min_doc_coverage = 20.0
