[project]
name = "osef-python"
version = "1.0.0"
description = "OSEF Python Reference Platform"
authors = [{ name = "OSEF Core Team" }]
license = { text = "Apache-2.0" }
dependencies = [
    "osef>=0.4.0",
]
requires-python = ">=3.10"

[project.entry-points."osef.plugins"]
python = "osef_python.plugin:PythonPlugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
