[project]
name = "osef-java-reference"
version = "1.0.0"
description = "Reference implementation of the Java language pack for OSEF"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-java"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
