[project]
name = "osef-documentation"
version = "1.0.0"
description = "OSEF Documentation Intelligence Plugin"
authors = [
    { name = "OSEF Core Team", email = "core@osef.io" }
]
requires-python = ">=3.14"
dependencies = [
    "pyyaml>=6.0",
]

[project.entry-points."osef.plugins"]
documentation = "osef_documentation.plugin:DocumentationPlugin"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
